# msi-survivor-lab

./: CHANGELOG.md  CITATION.cff  GITHUB_UPLOAD_NOTES.md  LICENSE  README.md  pyproject.toml
apps/: msi_survivor_gui
archive/python_versions/: msi_survivor_lab_v01.py  msi_survivor_lab_v02.py  msi_survivor_lab_v03_diagrams.py  msi_survivor_lab_v04_validation.py  msi_survivor_lab_v05_pattern.py  msi_survivor_lab_v06_layered.py  msi_survivor_lab_v07_boundary_multilayer.py  msi_survivor_lab_v08_polynomial.py  msi_survivor_lab_v09_integrated.py
docs/: research_status.md  software_versions.md
examples/: goldbach_count.py  polynomial_law_demo.py
src/msi_survivor/: __init__.py  cli.py  core.py
tests/: test_core.py
